mule-user-guide/v/3.4/datamapper-examples.adoc
= Anypoint DataMapper Examples

Many of the advanced capabilities of Anypoint DataMapper are best understood through examples. This page lists examples that illustrate using DataMapper in common but complex use cases. 

[width="100%",cols=",",options="header"]
|===
|Example |Description
|link:/mule-user-guide/v/3.4/datamapper-flat-to-structured-and-structured-to-flat-mapping[DataMapper Flat-to-Structured and Structured-to-Flat Mapping] |Shows how to build maps that extract from and populate complex, multiple-level nested structures.
|link:/mule-user-guide/v/3.4/datamapper-fixed-width-input-format[DataMapper Fixed Width Input Format] |Two scenarios using DataMapper to extract data from fixed-width input files.
|link:/mule-user-guide/v/3.4/datamapper-with-flowreflookup-example[DataMapper Example: FlowRef Lookup with Salesforce.com] |Uses DataMapper's FlowRef Lookup Table, *Mule DataSense* and *DataMapper* to map and transform data, thereby facilitating quick integration with Salesforce.
|link:/mule-user-guide/v/3.4/legacy-modernization-example[Legacy Modernization Example] |Makes extensive use of rules for extracting data from nested structures, and translates requests from a SOAP web service for a file-based legacy application.
|link:/mule-user-guide/v/3.4/xml-only-soap-web-service-example[XML-Only SOAP Web Service Example] | Demonstrates service orchestration and content-based routing. Based on the use case of patient admission into a hospital. Accepts SOAP requests, then orchestrates several Web services  to complete a business process.  Uses a DataMapper to map data from the responses from several internal hospital Web services to a response to send to the end user.
|===
